--- a/0-bootstrap/single-cluster/1-infra/kustomization.yaml
+++ b/0-bootstrap/single-cluster/1-infra/kustomization.yaml
@@ -12,7 +12,7 @@ resources:
 #- argocd/namespace-sealed-secrets.yaml
 - argocd/namespace-tools.yaml
 - argocd/namespace-instana-agent.yaml
-#- argocd/namespace-robot-shop.yaml
+- argocd/namespace-robot-shop.yaml
 #- argocd/namespace-openshift-serverless.yaml
 #- argocd/namespace-knative-eventing.yaml
 #- argocd/namespace-knative-serving.yaml
