--- a/0-bootstrap/single-cluster/2-services/kustomization.yaml
+++ b/0-bootstrap/single-cluster/2-services/kustomization.yaml
@@ -76,8 +76,8 @@ resources:
 # Required for IBM MQ
 #- argocd/instances/openldap.yaml
 # Required for IBM ACE, IBM MQ
-#- argocd/operators/cert-manager.yaml
-#- argocd/instances/cert-manager-instance.yaml
+- argocd/operators/cert-manager.yaml
+- argocd/instances/cert-manager-instance.yaml
 
 # Sealed Secrets
 #- argocd/instances/sealed-secrets.yaml
@@ -100,7 +100,7 @@ resources:
 #- argocd/instances/openshift-serverless-knative-serving-instance.yaml
 
 # Service Mesh
-#- argocd/operators/elasticsearch.yaml
+- argocd/operators/elasticsearch.yaml
 #- argocd/operators/jaeger.yaml
 #- argocd/operators/kiali.yaml
 #- argocd/operators/openshift-service-mesh.yaml
