--- a/0-bootstrap/single-cluster/2-services/kustomization.yaml
+++ b/0-bootstrap/single-cluster/2-services/kustomization.yaml
@@ -100,7 +100,7 @@ resources:
 #- argocd/instances/openshift-serverless-knative-serving-instance.yaml
 
 # Service Mesh
-- argocd/operators/elasticsearch.yaml
+#- argocd/operators/elasticsearch.yaml
 #- argocd/operators/jaeger.yaml
 #- argocd/operators/kiali.yaml
 #- argocd/operators/openshift-service-mesh.yaml
