--- a/0-bootstrap/single-cluster/2-services/argocd/instances/artifactory.yaml
+++ b/0-bootstrap/single-cluster/2-services/argocd/instances/artifactory.yaml
@@ -44,7 +44,7 @@ spec:
               password: admin
             persistence:
               enabled: true
-              storageClassName: ''
+              storageClassName: 'ocs-storagecluster-ceph-rbd'
               size: 5Gi
             uid: 0
           ingress:
