--- a/0-bootstrap/single-cluster/2-services/kustomization.yaml
+++ b/0-bootstrap/single-cluster/2-services/kustomization.yaml
@@ -76,8 +76,8 @@ resources:
 # Required for IBM MQ
 #- argocd/instances/openldap.yaml
 # Required for IBM ACE, IBM MQ
-- argocd/operators/cert-manager.yaml
-- argocd/instances/cert-manager-instance.yaml
+#- argocd/operators/cert-manager.yaml
+#- argocd/instances/cert-manager-instance.yaml
 
 # Sealed Secrets
 #- argocd/instances/sealed-secrets.yaml
@@ -86,7 +86,7 @@ resources:
 #- argocd/operators/grafana-operator.yaml
 #- argocd/instances/grafana-instance.yaml
 #- argocd/instances/grafana-instana.yaml
-- argocd/instances/artifactory.yaml
+#- argocd/instances/artifactory.yaml
 #- argocd/instances/chartmuseum.yaml
 - argocd/instances/developer-dashboard.yaml
 - argocd/instances/swaggereditor.yaml
